tests/paczka2/big_fuzzy/92261577.err
Error in line 3: 8WV A398 37,8
Error in line 16: IJF4m A960 54,7
Error in line 22: 3xMPrVl4Cz9 S954 5,9
Error in line 11: 8WV A960 67,7
Error in line 32: A398 S333 43,54
Error in line 28: kMtTTnce A398 83,0
Error in line 47: 8WV A960 42,1
Error in line 48: gKPTrqNyVp8 S333 28,4
Error in line 58: kMtTTnce A960 3,1
Error in line 60: kMtTTnce S333 33,9
Error in line 65: kMtTTnce A960 42,0
Error in line 74: IJF4m A398 -2,1
Error in line 70: IJF4m A398 38,7
Error in line 78: A398 S954 80,6
Error in line 77: 2E8zegJWhIR S954 5,5
Error in line 108: A398 A398 10,4
Error in line 119: gKPTrqNyVp8 S333 72,6
Error in line 123: gKPTrqNyVp8 S954 33,3
Error in line 126: kMtTTnce A960 86,3
Error in line 145: 2E8zegJWhIR S333 4,7
Error in line 150: IJF4m S333 65,9
Error in line 159: IJF4m S954 47,7
Error in line 164: 8WV A960 72,8
Error in line 162: kMtTTnce S333 42,9
Error in line 154: 3xMPrVl4Cz9 A960 89,5
Error in line 174: 3xMPrVl4Cz9 S954 84,3
Error in line 175: 3xMPrVl4Cz9 S333 31,7
Error in line 169: 8WV S333 32,3
Error in line 189: 3xMPrVl4Cz9 S333 64,7
Error in line 186: A398 A398 7,4
Error in line 201: kMtTTnce S954 7,4
Error in line 225: A398 A398 61,2
Error in line 229: IJF4m S954 75,1
Error in line 243: 2E8zegJWhIR S954 54,1
Error in line 246: gKPTrqNyVp8 S333 5,2
Error in line 245: kMtTTnce A960 34,6
